# PGen-Rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
assets/: words.json
src/: asset.rs  generator.rs  main.rs  rules.rs  transformation.rs
