[package]
name = "pgen-rust"
version = "0.1.0"
authors = ["Racci <racci@racci.dev>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Racci/PGen-Rust"
categories = ["command-line-utilities"]
keywords = ["generator", "password"]
description = "A password generator written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive", "cargo"] }
rand = "0.8.5"
log = "0.4.16"
serde_json = "1.0.59"
serde = { version = "1.0.136", features = ["derive"] }
rust-embed="6.4.0"
