[package]
name = "rpgen"
version = "0.1.1"
authors = ["Racci <racci@racci.dev>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Racci/PGen-Rust"
categories = ["command-line-utilities"]
keywords = ["generator", "password"]
description = "A password generator written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive", "cargo"] }
simplelog = { version = "^0.12.0", features = ["paris"] }
serde = { version = "1.0.136", features = ["derive"] }
rand = "0.8.5"
log = "0.4.17"
serde_json = "1.0.59"
rust-embed="6.8.1"
strum = "0.24.0"
strum_macros = "0.24"
dirs = "1.0.5"
toml = "0.5.9"
